@@ -90,6 +90,7 @@ Tutorial: Basic Unit Testing
 
 Advanced Features
 
+* Convenience Test Functions::  
 * Running Multiple Cases::      
 * No Fork Mode::                
 * Test Fixtures::               
@@ -801,6 +802,7 @@ features described in this section are additions to Check that make it
 easier for the developer to write, run, and analyse tests.
 
 @menu
+* Convenience Test Functions::  
 * Running Multiple Cases::      
 * No Fork Mode::                
 * Test Fixtures::               
@@ -813,7 +815,54 @@ easier for the developer to write, run, and analyse tests.
 * Subunit Support::             
 @end menu
 
-@node Running Multiple Cases, No Fork Mode, Advanced Features, Advanced Features
+@node Convenience Test Functions, Running Multiple Cases, Advanced Features, Advanced Features
+@section Convenience Test Functions
+
+Using the @code{fail_unless} function for all tests can lead to lot of repetitive
+code that is hard to read.  For your convenience Check provides a set of functions
+(actually macros) for testing often used conditions.
+
+@table @code
+@vindex ck_abort
+@item ck_abort
+Unconditionally fails test with default message.
+
+@vindex ck_abort_msg
+@item ck_abort_msg
+Unconditionally fails test with user supplied message.
+
+@vindex ck_assert
+@item ck_assert
+Fails test if supplied condition evaluates to true. This function is equivalent to
+@code{fail_unless} with @code{NULL} as a message.
+
+@vindex ck_assert_msg
+@item ck_assert_msg
+Fails test if supplied condition evaluates to true and displays user provided
+message. This function is equivalent to @code{fail_unless}.
+
+@vindex ck_assert_int_eq
+@item ck_assert_int_eq
+Takes two integer values, compares them for equality and fails test if values
+are not equal. Uses predefined message displaying failed condition and values of
+both input parameters.
+
+@vindex ck_assert_int_ne
+@item ck_assert_int_ne
+Same as @code{ck_assert_int_eq} but fails if the values are equal.
+
+@vindex ck_assert_str_eq
+@item ck_assert_str_eq
+Same as @code{ck_assert_int_eq} but takes @code{char*} values and compares
+them using the @code{strcmp()} function.
+
+@vindex ck_assert_str_eq
+@item ck_assert_str_eq
+Same as @code{ck_assert_int_ne} but takes @code{char*} values and compares
+them using the @code{strcmp()} function.
+@end table
+
+@node Running Multiple Cases, No Fork Mode, Convenience Test Functions, Advanced Features
 @section Running Multiple Cases
 
 What happens if we pass @code{-1} as the @code{amount} in
